# SDL2Boids

./: CMakeLists.txt  README.md  SDL2Boids.sln  SDL2Boids.vcxproj  SDL2Boids.vcxproj.filters  SDL2Experiments.sln  SDL2Experiments.vcxproj  SDL2Experiments.vcxproj.filters
src/: Vec2.c  Vec2.h  arena.h  boid.c  boid.h  boidSOA.c  boidSOA.h  camera.c  camera.h  common.c  common.h  constants.h  defs.h  draw.c  draw.h  flockbehavior.c  flockbehavior.h  flockbehaviorSOA.c  flockbehaviorSOA.h  init.c  input.c  main.c  obstacles.c  obstacles.h  player.c  player.h  poi.c  poi.h  stats.c  stats.h  structs.h  types.h  uniformgrid.c  uniformgrid.h  vector2.c  vector2.h  vectormath.c  vectormath.h  workerpool.c  workerpool.h
